"premieres lignes de codes"

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 
     <h1>Cours JS Grafikart</h1>
 </body>
-<script src="./js/app-1.js"></script>
+<!-- <script src="./js/app-1.js"></script> -->
 <script src="./js/app-2.js"></script>
 </html>
